--- a/app/src/main/res/layout/item_people.xml
+++ b/app/src/main/res/layout/item_people.xml
@@ -7,32 +7,31 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        >
+        android:padding="10dp">
 
         <ImageView
-            android:id="@+id/inin_image"
+            android:id="@+id/image"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/leva1"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            android:src="@drawable/leva1" />
 
         <TextView
-            android:id="@+id/inin_text"
+            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="이름 : 읭읭이"
-            android:layout_toRightOf="@id/inin_image"
-            android:textSize="20sp"
-            />
+            android:layout_toRightOf="@id/image"
+            android:text="Name"
+            android:textSize="20sp" />
+
         <TextView
             android:id="@+id/phoneNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/inin_image"
-            android:layout_below="@id/inin_text"
-            android:text="특징 : 귀여움"
-            android:textSize="20sp"/>
+            android:layout_below="@id/name"
+            android:layout_toRightOf="@id/image"
+            android:text="PhoneNumber"
+            android:textSize="20sp" />
 
     </RelativeLayout>
 </LinearLayout>
